--- a/paid-subscribe/index.html
+++ b/paid-subscribe/index.html
@@ -2,21 +2,21 @@
 <html>
 
 <head>
-        <link rel="canonical" href="http://cgp2-z.com/paid-subscribe/" />
+        <link rel="canonical" href="http://cgp2-g.com/paid-subscribe/" />
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>付费机场订阅推荐，支持Clash/V2ray/Surge/VMESS等客户端和协议 - 顶级代理服务器 免费订阅中文网</title>
-        <meta name="keywords" content="Shadowsocks 机场排名,Trojan机场排名,V2ray机场排名,中国国内能用的翻墙VPN推荐,付费机场排名,付费机场推荐,翻墙VPN排名" />
-        <meta name="description" content="2024 按量付费机场哪个好？甄选了几个口碑不错的按量付费机场，多数为不限时长按量付费机场，少部分限时1年或2年 - 顶级代理服务器 免费订阅中文网" />
+    <title>付费好用机场订阅推荐，支持Clash/V2ray/Surge/VMESS等客户端和协议 - 顶级代理服务器 免费订阅中文网</title>
+        <meta name="keywords" content="Shadowsocks 机场排名,Trojan机场排名,V2ray机场排名,中国国内好用的翻墙VPN推荐,付费机场排名,付费好用机场推荐,翻墙VPN排名" />
+        <meta name="description" content="2025 按量付费机场哪个好？甄选了几个口碑不错的按量付费机场，多数为不限时长按量付费好用机场，少部分限时1年或2年 - 顶级代理服务器 免费订阅中文网" />
         <link rel="icon" href="/assets/website/img/v2raysubscribe/favicon.ico" type="image/x-icon"/>
 
     <meta name="author" content="顶级代理服务器 免费订阅中文网">
     <meta property="og:type" content="webpage" />
-    <meta property="og:url" content="http://cgp2-z.com/paid-subscribe/" />
+    <meta property="og:url" content="http://cgp2-g.com/paid-subscribe/" />
     <meta property="og:site_name" content="顶级代理服务器 免费订阅中文网" />
-    <meta property="og:title" content="付费机场订阅推荐，支持Clash/V2ray/Surge/VMESS等客户端和协议 - 顶级代理服务器 免费订阅中文网" />
+    <meta property="og:title" content="付费好用机场订阅推荐，支持Clash/V2ray/Surge/VMESS等客户端和协议 - 顶级代理服务器 免费订阅中文网" />
     <meta property="og:image" content="/assets/website/img/v2raysubscribe/favicon.ico" />
-        <meta property="og:description" content="2024 按量付费机场哪个好？甄选了几个口碑不错的按量付费机场，多数为不限时长按量付费机场，少部分限时1年或2年 - 顶级代理服务器 免费订阅中文网" />
+        <meta property="og:description" content="2025 按量付费机场哪个好？甄选了几个口碑不错的按量付费机场，多数为不限时长按量付费好用机场，少部分限时1年或2年 - 顶级代理服务器 免费订阅中文网" />
         
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="all,follow">
@@ -28,7 +28,7 @@
     <meta name="robots" content="max-image-preview:large" />
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-title" content="付费机场订阅推荐，支持Clash/V2ray/Surge/VMESS等客户端和协议 - 顶级代理服务器 免费订阅中文网">
+    <meta name="apple-mobile-web-app-title" content="付费好用机场订阅推荐，支持Clash/V2ray/Surge/VMESS等客户端和协议 - 顶级代理服务器 免费订阅中文网">
     <meta name="format-detection" content="telephone=no">
 
     <link rel="dns-prefetch" href="https:/www.googletagmanager.com">
@@ -59,8 +59,7 @@
     <!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
         <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
-    
-<!-- Google tag (gtag.js) -->
+    <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-JLSMD0FN8T"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -544,7 +543,11 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
+                        <li class="py-2"><a href="/news/article-121943.htm" title="深度剖析r1d科学上网：解锁全球网络自由的全方位指南">深度剖析r1d科学上网：解锁全球网络自由的全方位指南</a></li>
+                        <li class="py-2"><a href="/news/article-122882.htm" title="突破网络限制：Shadowrocket电脑版完整安装与使用指南">突破网络限制：Shadowrocket电脑版完整安装与使用指南</a></li>
+                        <li class="py-2"><a href="/news/article-122250.htm" title="突破网络边界：磊科科学上网全攻略与深度体验">突破网络边界：磊科科学上网全攻略与深度体验</a></li>
                         <li class="py-2"><a href="/news/article-121828.htm" title="从零开始掌握v2rayng购买全攻略：手把手教你安全上网">从零开始掌握v2rayng购买全攻略：手把手教你安全上网</a></li>
+                        <li class="py-2"><a href="/news/article-122572.htm" title="Quantumult X 与 V2Ray 的完美联姻：打造坚不可摧的隐私防护盾">Quantumult X 与 V2Ray 的完美联姻：打造坚不可摧的隐私防护盾</a></li>
                     </ul>
     </div>
 </div>
@@ -556,7 +559,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">1</span> <a href="/date/2025-06/" title="2025-06 归档">2025-06</a></h4>
+                <h4><span class="badge" style="float: right;">5</span> <a href="/date/2025-06/" title="2025-06 归档">2025-06</a></h4>
             </li>
                     </ul>
     </div>
