--- a/index.html
+++ b/index.html
@@ -114,6 +114,81 @@
                     <div class="col-md-9">
                         <h2 class="mb-3">最近更新文章</h2>
                         <div class="xcblog-blog-list">
+                                                        <div class="row text-center-mobile item xcblog-blog-item" data-date="2025-06-14">
+                                <div class="col-md-3">
+                                    <a href="/news/article-124501.htm" class="xcblog-blog-url">
+                                        <img alt="Chrome科学上网全攻略：从入门到精通的完整指南" src="/uploads/20241210/c278b237ca134e76b531b8ac6712b2fd.webp" class="img-responsive">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/news/article-124501.htm" class="xcblog-blog-url">
+                                        <h3 class="xcblog-blog-title">
+                                            Chrome科学上网全攻略：从入门到精通的完整指南                                        </h3>
+                                    </a>
+                                    <p>
+                                        在信息爆炸的互联网时代，全球化的知识获取已成为刚需，然而网络边界的客观存在让许多人陷入"数字围城"的困境。作为全球市场份额第一的浏览器，Chrome凭借其卓越的性能和丰富的扩展生态，成为突破网络限制的                                    </p>
+                                </div>
+                            </div>
+                                                        <div class="row text-center-mobile item xcblog-blog-item" data-date="2025-06-13">
+                                <div class="col-md-3">
+                                    <a href="/news/article-124173.htm" class="xcblog-blog-url">
+                                        <img alt="突破网络边界：2024年最全面的科学上网终极指南" src="/uploads/20241210/c41639d317274b549e30468583bb8b13.webp" class="img-responsive">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/news/article-124173.htm" class="xcblog-blog-url">
+                                        <h3 class="xcblog-blog-title">
+                                            突破网络边界：2024年最全面的科学上网终极指南                                        </h3>
+                                    </a>
+                                    <p>
+                                        引言：数字时代的"网络通行证"  在信息如氧气般重要的21世纪，全球互联网却被人为划分成一个个"数字孤岛"。据统计，全球有超过40个国家实施不同程度的网络审查，影响约20亿网民。科学上网已从技术爱好者                                    </p>
+                                </div>
+                            </div>
+                                                        <div class="row text-center-mobile item xcblog-blog-item" data-date="2025-06-12">
+                                <div class="col-md-3">
+                                    <a href="/news/article-123845.htm" class="xcblog-blog-url">
+                                        <img alt="手机热点与V2Ray强强联合：打造高速安全移动上网的终极指南" src="/uploads/20241210/c41639d317274b549e30468583bb8b13.webp" class="img-responsive">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/news/article-123845.htm" class="xcblog-blog-url">
+                                        <h3 class="xcblog-blog-title">
+                                            手机热点与V2Ray强强联合：打造高速安全移动上网的终极指南                                        </h3>
+                                    </a>
+                                    <p>
+                                        在当今数字化时代，稳定、高速且安全的网络连接已成为人们工作、学习和娱乐的基本需求。然而，我们常常面临公共Wi-Fi不安全、网络限制严格或传统宽带覆盖不足的困境。本文将为您揭示一种创新的解决方案——通过                                    </p>
+                                </div>
+                            </div>
+                                                        <div class="row text-center-mobile item xcblog-blog-item" data-date="2025-06-11">
+                                <div class="col-md-3">
+                                    <a href="/news/article-123523.htm" class="xcblog-blog-url">
+                                        <img alt="突破边界，自由翱翔：启星浏览器科学上网全攻略" src="/uploads/20241210/c278b237ca134e76b531b8ac6712b2fd.webp" class="img-responsive">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/news/article-123523.htm" class="xcblog-blog-url">
+                                        <h3 class="xcblog-blog-title">
+                                            突破边界，自由翱翔：启星浏览器科学上网全攻略                                        </h3>
+                                    </a>
+                                    <p>
+                                        在当今这个信息爆炸的时代，互联网已经成为人们获取知识、交流思想的重要渠道。然而，由于各种原因，许多优质的网络资源被地域限制所阻挡，让用户无法自由访问。科学上网工具的出现，为这一困境提供了解决方案。而在                                    </p>
+                                </div>
+                            </div>
+                                                        <div class="row text-center-mobile item xcblog-blog-item" data-date="2025-06-10">
+                                <div class="col-md-3">
+                                    <a href="/news/article-123207.htm" class="xcblog-blog-url">
+                                        <img alt="突破封锁的艺术：Trojan与V2Ray速度优化全攻略" src="/uploads/20241210/80923e8adcaff7112f1dac91ed307e74.webp" class="img-responsive">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/news/article-123207.htm" class="xcblog-blog-url">
+                                        <h3 class="xcblog-blog-title">
+                                            突破封锁的艺术：Trojan与V2Ray速度优化全攻略                                        </h3>
+                                    </a>
+                                    <p>
+                                        在当今数字时代，网络自由已成为基本需求，而Trojan与V2Ray作为突破网络封锁的利器，其性能表现直接关系到用户的网络体验。本文将深入剖析这两款工具的速度表现，并提供一系列经过验证的优化技巧，助你打                                    </p>
+                                </div>
+                            </div>
                                                         <div class="row text-center-mobile item xcblog-blog-item" data-date="2025-06-09">
                                 <div class="col-md-3">
                                     <a href="/news/article-122882.htm" class="xcblog-blog-url">
@@ -198,11 +273,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-121943.htm" title="深度剖析r1d科学上网：解锁全球网络自由的全方位指南">深度剖析r1d科学上网：解锁全球网络自由的全方位指南</a></li>
-                        <li class="py-2"><a href="/news/article-121828.htm" title="从零开始掌握v2rayng购买全攻略：手把手教你安全上网">从零开始掌握v2rayng购买全攻略：手把手教你安全上网</a></li>
+                        <li class="py-2"><a href="/news/article-124173.htm" title="突破网络边界：2024年最全面的科学上网终极指南">突破网络边界：2024年最全面的科学上网终极指南</a></li>
                         <li class="py-2"><a href="/news/article-122250.htm" title="突破网络边界：磊科科学上网全攻略与深度体验">突破网络边界：磊科科学上网全攻略与深度体验</a></li>
-                        <li class="py-2"><a href="/news/article-122572.htm" title="Quantumult X 与 V2Ray 的完美联姻：打造坚不可摧的隐私防护盾">Quantumult X 与 V2Ray 的完美联姻：打造坚不可摧的隐私防护盾</a></li>
+                        <li class="py-2"><a href="/news/article-121828.htm" title="从零开始掌握v2rayng购买全攻略：手把手教你安全上网">从零开始掌握v2rayng购买全攻略：手把手教你安全上网</a></li>
                         <li class="py-2"><a href="/news/article-122882.htm" title="突破网络限制：Shadowrocket电脑版完整安装与使用指南">突破网络限制：Shadowrocket电脑版完整安装与使用指南</a></li>
+                        <li class="py-2"><a href="/news/article-123845.htm" title="手机热点与V2Ray强强联合：打造高速安全移动上网的终极指南">手机热点与V2Ray强强联合：打造高速安全移动上网的终极指南</a></li>
+                        <li class="py-2"><a href="/news/article-123207.htm" title="突破封锁的艺术：Trojan与V2Ray速度优化全攻略">突破封锁的艺术：Trojan与V2Ray速度优化全攻略</a></li>
+                        <li class="py-2"><a href="/news/article-121943.htm" title="深度剖析r1d科学上网：解锁全球网络自由的全方位指南">深度剖析r1d科学上网：解锁全球网络自由的全方位指南</a></li>
+                        <li class="py-2"><a href="/news/article-122572.htm" title="Quantumult X 与 V2Ray 的完美联姻：打造坚不可摧的隐私防护盾">Quantumult X 与 V2Ray 的完美联姻：打造坚不可摧的隐私防护盾</a></li>
+                        <li class="py-2"><a href="/news/article-124501.htm" title="Chrome科学上网全攻略：从入门到精通的完整指南">Chrome科学上网全攻略：从入门到精通的完整指南</a></li>
+                        <li class="py-2"><a href="/news/article-123523.htm" title="突破边界，自由翱翔：启星浏览器科学上网全攻略">突破边界，自由翱翔：启星浏览器科学上网全攻略</a></li>
                     </ul>
     </div>
 </div>
@@ -214,7 +294,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">5</span> <a href="/date/2025-06/" title="2025-06 归档">2025-06</a></h4>
+                <h4><span class="badge" style="float: right;">10</span> <a href="/date/2025-06/" title="2025-06 归档">2025-06</a></h4>
             </li>
                     </ul>
     </div>
