xi ti yan jin xing duo huan jie quan fang wei you hua ying xiang chang jing xia shou ci yi ji di de gong

--- a/index.html
+++ b/index.html
@@ -114,6 +114,21 @@
                     <div class="col-md-9">
                         <h2 class="mb-3">最近更新文章</h2>
                         <div class="xcblog-blog-list">
+                                                        <div class="row text-center-mobile item xcblog-blog-item" data-date="2025-06-20">
+                                <div class="col-md-3">
+                                    <a href="/news/article-126467.htm" class="xcblog-blog-url">
+                                        <img alt="深度解析：V2RayNG连接无反应的全面诊断与修复指南" src="/uploads/20241210/2af9f03fabb1b81a60645001221a2a6b.webp" class="img-responsive">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/news/article-126467.htm" class="xcblog-blog-url">
+                                        <h3 class="xcblog-blog-title">
+                                            深度解析：V2RayNG连接无反应的全面诊断与修复指南                                        </h3>
+                                    </a>
+                                    <p>
+                                        引言  在当今互联网环境中，科学上网工具已成为许多用户突破网络限制的重要选择。作为V2Ray的安卓客户端，V2RayNG凭借其强大的功能和简洁的界面赢得了广泛青睐。然而，不少用户在使用过程中会遇到点击                                    </p>
+                                </div>
+                            </div>
                                                         <div class="row text-center-mobile item xcblog-blog-item" data-date="2025-06-19">
                                 <div class="col-md-3">
                                     <a href="/news/article-126134.htm" class="xcblog-blog-url">
@@ -348,16 +363,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-123207.htm" title="突破封锁的艺术：Trojan与V2Ray速度优化全攻略">突破封锁的艺术：Trojan与V2Ray速度优化全攻略</a></li>
-                        <li class="py-2"><a href="/news/article-124501.htm" title="Chrome科学上网全攻略：从入门到精通的完整指南">Chrome科学上网全攻略：从入门到精通的完整指南</a></li>
-                        <li class="py-2"><a href="/news/article-123523.htm" title="突破边界，自由翱翔：启星浏览器科学上网全攻略">突破边界，自由翱翔：启星浏览器科学上网全攻略</a></li>
-                        <li class="py-2"><a href="/news/article-126134.htm" title="突破网络边界：科学上网APK的深度指南与实战技巧">突破网络边界：科学上网APK的深度指南与实战技巧</a></li>
-                        <li class="py-2"><a href="/news/article-122572.htm" title="Quantumult X 与 V2Ray 的完美联姻：打造坚不可摧的隐私防护盾">Quantumult X 与 V2Ray 的完美联姻：打造坚不可摧的隐私防护盾</a></li>
-                        <li class="py-2"><a href="/news/article-122882.htm" title="突破网络限制：Shadowrocket电脑版完整安装与使用指南">突破网络限制：Shadowrocket电脑版完整安装与使用指南</a></li>
-                        <li class="py-2"><a href="/news/article-124798.htm" title="V2RayNG 32位全攻略：从零开始掌握高效代理工具">V2RayNG 32位全攻略：从零开始掌握高效代理工具</a></li>
+                        <li class="py-2"><a href="/news/article-126467.htm" title="深度解析：V2RayNG连接无反应的全面诊断与修复指南">深度解析：V2RayNG连接无反应的全面诊断与修复指南</a></li>
+                        <li class="py-2"><a href="/news/article-123845.htm" title="手机热点与V2Ray强强联合：打造高速安全移动上网的终极指南">手机热点与V2Ray强强联合：打造高速安全移动上网的终极指南</a></li>
                         <li class="py-2"><a href="/news/article-125143.htm" title="突破网络边界：科学上网代理插件的终极使用手册">突破网络边界：科学上网代理插件的终极使用手册</a></li>
+                        <li class="py-2"><a href="/news/article-126134.htm" title="突破网络边界：科学上网APK的深度指南与实战技巧">突破网络边界：科学上网APK的深度指南与实战技巧</a></li>
+                        <li class="py-2"><a href="/news/article-123207.htm" title="突破封锁的艺术：Trojan与V2Ray速度优化全攻略">突破封锁的艺术：Trojan与V2Ray速度优化全攻略</a></li>
+                        <li class="py-2"><a href="/news/article-121943.htm" title="深度剖析r1d科学上网：解锁全球网络自由的全方位指南">深度剖析r1d科学上网：解锁全球网络自由的全方位指南</a></li>
+                        <li class="py-2"><a href="/news/article-122882.htm" title="突破网络限制：Shadowrocket电脑版完整安装与使用指南">突破网络限制：Shadowrocket电脑版完整安装与使用指南</a></li>
+                        <li class="py-2"><a href="/news/article-122250.htm" title="突破网络边界：磊科科学上网全攻略与深度体验">突破网络边界：磊科科学上网全攻略与深度体验</a></li>
+                        <li class="py-2"><a href="/news/article-124501.htm" title="Chrome科学上网全攻略：从入门到精通的完整指南">Chrome科学上网全攻略：从入门到精通的完整指南</a></li>
                         <li class="py-2"><a href="/news/article-125794.htm" title="热点共享科学上网：解锁网络自由的终极指南与深度解析">热点共享科学上网：解锁网络自由的终极指南与深度解析</a></li>
-                        <li class="py-2"><a href="/news/article-121828.htm" title="从零开始掌握v2rayng购买全攻略：手把手教你安全上网">从零开始掌握v2rayng购买全攻略：手把手教你安全上网</a></li>
                     </ul>
     </div>
 </div>
@@ -369,7 +384,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">15</span> <a href="/date/2025-06/" title="2025-06 归档">2025-06</a></h4>
+                <h4><span class="badge" style="float: right;">16</span> <a href="/date/2025-06/" title="2025-06 归档">2025-06</a></h4>
             </li>
                     </ul>
     </div>
